name:                fish-parser
version:             0.1.0.0
synopsis:            a parser for the fish-shell language
-- description:         
license:             MIT
license-file:        LICENSE
-- author:              
-- maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag Trifecta
  Description: Enable Trifecta support
  Default:     True

flag Attoparsec
  Description: Enable Attoparsec support
  Default:     True

flag Parsec
  Description: Enable Parsec support
  Default:     False

flag ReadP
  Description: Enable ReadP support
  Default:     False

library
  exposed-modules:     Fish.UnParser.Quote
  exposed-modules:     Fish.UnParser.UnParser
  exposed-modules:     Fish.Parser.Redirect
  exposed-modules:     Fish.Parser.Common
  exposed-modules:     Fish.Parser.Glob
  exposed-modules:     Fish.Parser.Parser
  exposed-modules:     Fish.Parser.Gen
  exposed-modules:     Fish.Parser.Version
  
  -- other-modules:       
  -- other-extensions:    many ... todo: fill this in
  
  build-depends:       base               >=4.9 && <4.13
  build-depends:       mtl                >=2.2.1 && <2.3
  build-depends:       parsers            >= 0.12.4 && < 0.13
  build-depends:       text               >= 1.2.2 && < 1.3
  build-depends:       charset            >= 0.3.7 && < 0.4
  build-depends:       lens               >= 4.15.1 && < 4.18
  build-depends:       fish-lang          >= 0.1.0 && < 0.2
  build-depends:       nfc-text           >= 0.1.0 && < 0.2
  build-depends:       gitrev             >= 1.2.0 && < 1.4
  
  if flag(trifecta)
    exposed-modules: Fish.Parser.Trifecta
    build-depends: trifecta >= 2 && < 2.1
  if flag(parsec)
    exposed-modules: Fish.Parser.Parsec
    build-depends: parsec >=3.1 && <3.2
  if flag(attoparsec)
    exposed-modules: Fish.Parser.Attoparsec
    build-depends: attoparsec >= 0.13.1 && < 0.14
  if flag(readp)
    exposed-modules: Fish.Parser.ReadP
  
  default-language:    Haskell2010
  
